//
//  Constants.swift
//  LloydsDemoApp
//
//  Created by Niraj Shah on 12/07/22.
//

import Foundation

struct Constants {
    static let host = "api.vatcomply.com"
    static let currencyPath = "/currencies"
    static let currencyListText = "Currency List"
}
