...
            <objects>
                <viewController storyboardIdentifier="CurrencyListViewController" id="BYZ-38-t0r" customClass="CurrencyListViewController" customModule="LloydsDemoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="YAj-1o-6rQ">
                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="J5P-IG-71U"/>
                                </connections>
                            </searchBar>
...
